Fix AudioManipulator for loop to include all clips
Signed-off-by: dedetive <ded31459@hotmail.com>